tui/src/bottom_pane/snapshots/estelle_tui__bottom_pane__skills_toggle_view__tests__skills_toggle_basic.snap
---
source: tui/src/bottom_pane/skills_toggle_view.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Enable/Disable Skills                                                 
  Turn skills on or off. Saved on change.                               
                                                                        
  Type to search skills                                                 
  >                                                                     
› [x] Repo Scout        Summarize the repo layout                       
  [ ] Changelog Writer  Draft release notes                             
                                                                        
  Press space or enter to toggle; esc to close
